# clp-ffi-py

./: .clang-format  .clang-tidy  .gersemirc  .gitignore  .gitmodules  .yamllint.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  Taskfile.yml  lint-requirements.txt  lint-tasks.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build_wheels.yml  lint.yml  pr-title-check.yml  pr-title-checks.yaml
clp_ffi_py/: CLPFourByteEncoder.pyi  CLPIR.pyi  CLPIRDecoder.pyi  __init__.py  ir.pyi  query.py  query_builder.py  readers.py  utils.py  wildcard_query.py
clp_ffi_py/ir/: __init__.py  ir_ffi.pyi  native.pyi  native_deprecated.py  query_builder.py  readers.py  wildcard_query.py
docs/: README.md  Taskfile.yml  build.sh  requirements.txt  tasks.yml
docs/conf/: conf.py
docs/src/: index.md
docs/src/api/: clp_ffi_py.ir.native.rst  clp_ffi_py.ir.native_deprecated.rst  clp_ffi_py.ir.query_builder.rst  clp_ffi_py.ir.readers.rst  clp_ffi_py.ir.rst  clp_ffi_py.rst  clp_ffi_py.utils.rst  clp_ffi_py.wildcard_query.rst
src/: .clang-format
src/clp_ffi/: ErrorMessage.hpp  Python.hpp  clp_four_byte_encoder.cpp  encoding_method.cpp  encoding_method.hpp
src/clp_ffi/encoder/: encoding_methods.cpp  encoding_methods.hpp
src/clp_ffi/modules/: clp_four_byte_encoder.cpp
src/clp_ffi_py/: .clang-format  .clang-tidy  ErrorMessage.hpp  ErrorMessages.hpp  ExceptionFFI.hpp  PyExceptionContext.hpp  PyObjectCast.hpp  PyObjectPtr.hpp  PyObjectUtils.hpp  Py_utils.cpp  Py_utils.hpp  Python.hpp  api_decoration.hpp  error_messages.hpp  utils.cpp  utils.hpp  utils.inc  utils.tpp
src/clp_ffi_py/decoder/: LogEvent.cpp  LogEvent.hpp  Metadata.cpp  Metadata.hpp
src/clp_ffi_py/encoder/: encoding_methods.cpp  encoding_methods.hpp
src/clp_ffi_py/ir/: ErrorMessages.hpp  LogEvent.hpp  Metadata.cpp  Metadata.hpp  PyDecoder.cpp  PyDecoder.hpp  PyDecoderBuffer.cpp  PyDecoderBuffer.hpp  PyFourByteEncoder.cpp  PyFourByteEncoder.hpp  PyLogEvent.cpp  PyLogEvent.hpp  PyMetadata.cpp  PyMetadata.hpp  PyQuery.cpp  PyQuery.hpp  Query.cpp  Query.hpp  decoding_methods.cpp  decoding_methods.hpp  encoding_methods.cpp  encoding_methods.hpp  error_messages.hpp
src/clp_ffi_py/ir/native/: DeserializerBufferReader.cpp  DeserializerBufferReader.hpp  LogEvent.hpp  Metadata.cpp  Metadata.hpp  PyDecoder.cpp  PyDecoder.hpp  PyDecoderBuffer.cpp  PyDecoderBuffer.hpp  PyDeserializer.cpp  PyDeserializer.hpp  PyDeserializerBuffer.cpp  PyDeserializerBuffer.hpp  PyFourByteDeserializer.cpp  PyFourByteDeserializer.hpp  PyFourByteEncoder.cpp  PyFourByteEncoder.hpp  PyFourByteSerializer.cpp  PyFourByteSerializer.hpp  PyKeyValuePairLogEvent.cpp  PyKeyValuePairLogEvent.hpp  PyLogEvent.cpp  PyLogEvent.hpp  PyMetadata.cpp  PyMetadata.hpp  PyQuery.cpp  PyQuery.hpp  PySerializer.cpp  PySerializer.hpp  Query.cpp  Query.hpp  decoding_methods.cpp  decoding_methods.hpp  deserialization_methods.cpp  deserialization_methods.hpp  encoding_methods.cpp  encoding_methods.hpp  error_messages.hpp  serialization_methods.cpp  serialization_methods.hpp
src/clp_ffi_py/ir_decoder/: LogEvent.cpp  LogEvent.hpp  Metadata.cpp  Metadata.hpp  PyLogEvent.cpp  PyLogEvent.hpp  PyMetadata.cpp  PyMetadata.hpp
src/clp_ffi_py/ir_encoder/: encoding_methods.cpp  encoding_methods.hpp
src/clp_ffi_py/ir_ffi/: LogEvent.hpp  Metadata.cpp  Metadata.hpp  PyDecoder.cpp  PyDecoder.hpp  PyDecoderBuffer.cpp  PyDecoderBuffer.hpp  PyFourByteEncoder.cpp  PyFourByteEncoder.hpp  PyLogEvent.cpp  PyLogEvent.hpp  PyMetadata.cpp  PyMetadata.hpp  PyQuery.cpp  PyQuery.hpp  Query.cpp  Query.hpp  decoding_methods.cpp  decoding_methods.hpp  encoding_methods.cpp  encoding_methods.hpp  error_messages.hpp
src/clp_ffi_py/ir_native/: LogEvent.hpp  Metadata.cpp  Metadata.hpp  PyDecoder.cpp  PyDecoder.hpp  PyDecoderBuffer.cpp  PyDecoderBuffer.hpp  PyFourByteEncoder.cpp  PyFourByteEncoder.hpp  PyLogEvent.cpp  PyLogEvent.hpp  PyMetadata.cpp  PyMetadata.hpp  PyQuery.cpp  PyQuery.hpp  Query.cpp  Query.hpp  decoding_methods.cpp  decoding_methods.hpp  encoding_methods.cpp  encoding_methods.hpp  error_messages.hpp
src/clp_ffi_py/modules/: clp_four_byte_encoder.cpp  clp_ir.cpp  clp_ir_decoder.cpp  ir.cpp  ir_native.cpp
src/wrapped_dependency_headers/: msgpack.hpp
src/wrapped_facade_headers/: Python.hpp  msgpack.hpp
tests/: TestCase.py  __init__.py  test_clpir.py  test_decoder.py  test_decoder_buffer.py  test_encoder.py  test_log_event.py  test_metadata.py  test_query.py  test_readers.py  test_utils.py
tests/DecoderBufferTestSrc/: rand_hadoop_log.clp.zst  the_goddess_of_the_luo.txt  the_goddess_of_the_luo.txt.zst
tests/test_data/: benchmark.clp  compressed_benchmark.clp.zst  rand_hadoop_log.clp
tests/test_ir/: __init__.py  test_decoder.py  test_decoder_buffer.py  test_deserializer.py  test_deserializer_buffer.py  test_encoder.py  test_key_value_pair_log_event.py  test_log_event.py  test_metadata.py  test_query.py  test_query_builder.py  test_readers.py  test_serder.py  test_serializer.py  test_utils.py
tests/test_ir/test_data/: incomplete_ir.log.zst  the_goddess_of_the_luo.txt.zst
tests/test_ir/test_data/jsonl/: elasticsearch.jsonl
tests/test_ir/test_json/: elasticsearch.json  spark-event-logs.json
